--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="help">帮助</string>
     <string name="position_back">返回键位置</string>
     <string name="open_service">开启辅助服务</string>
+    <string name="display">显示按钮</string>
 
 
     <!--summary-->
